fix: remove warning tests